--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
-
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "in.psapps.www.intent"
         minSdkVersion 21
@@ -16,6 +15,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
